--- a/application/templates/auth/adminstats.html
+++ b/application/templates/auth/adminstats.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="row justify-content-center" style="margin-top: 20px">
-    <div class="col-sm-8">
+    <div class="col-md-8">
         <h1>Administrator view</h1>
         <p>This is the administrator view. This is purely a technical demonstration for authorization.</p>
         <h3>Number of transactions in the database:</h3>
