--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -3,23 +3,23 @@
 {% block body %}
 {{ error }}
 <div class="row justify-content-center" style="margin-top: 20px">
-    <div class="col-sm-4">
+    <div class="col-lg-4">
         <h1 class="">Log in</h1>
     </div>
 </div>
 <div class="row justify-content-center" style="margin-top: 20px">
     
-    <div class="col-sm-4">
+    <div class="col-lg-6">
         <form method="POST" action="{{ url_for('auth_login')}}" class="">
              <div class="form-group row">
-                 {{ form.username.label(class_="col-sm-3 col-form-label") }}
-                 <div class="col-sm-9">
+                 {{ form.username.label(class_="col-sm-4 col-form-label") }}
+                 <div class="col-sm-8">
                     {{ form.username(class_="form-control") }}
                 </div>
              </div>
              <div class="form-group row">
-                 {{ form.password.label(class_="col-sm-3 col-form-label") }}
-                 <div class="col-sm-9">
+                 {{ form.password.label(class_="col-sm-4 col-form-label") }}
+                 <div class="col-sm-8">
                     {{ form.password(class_="form-control") }}
                 </div>
              </div>
