--- a/application/templates/auth/newuser.html
+++ b/application/templates/auth/newuser.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="row justify-content-center" >
-    <div class="col-sm-6">
+    <div class="col-md-6">
         <h1>Sign up</h1>
         <p>Sign up to Pivo-Slayer to start using our magnificent service. We'll even provide a few basic categories for you, ready for use!</p>
 
