--- a/application/templates/bankaccounts/bankaccounts.html
+++ b/application/templates/bankaccounts/bankaccounts.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="row justify-content-center" style="margin-top: 20px">
-    <div class="col-sm-10">
+    <div class="col-md-10">
         <h1>Accounts</h1>
         <table class="table">
             <thead class="thead-light">
