--- a/application/templates/bankaccounts/singlebankaccount.html
+++ b/application/templates/bankaccounts/singlebankaccount.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="row justify-content-center" style="margin-top: 20px">
-    <div class="col-sm-10">
+    <div class="col-lg-10">
         <h1>{{ account.name }}</h1>
         <table class="table">
             <tr>
