--- a/application/templates/categories/categories.html
+++ b/application/templates/categories/categories.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="row justify-content-center" style="margin-top: 20px">
-        <div class="col-sm-10">
+    <div class="col-md-8">
 
         <h1>Categories</h1>
         <p style="color: red">{{error}}</p>
